--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -11,6 +11,7 @@
   font-weight: 600;
   color: rgba(0, 0, 0, 0.55);
   overflow: hidden;
+  border-top: $border-box;
 
   &__icon {
     position: absolute;
